<resources>
    <string name="app_name">My Smart Municipal</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="abtUs">My Smart Municipal is an academic project designed by Ashhar and Dikshant under the supervision of Dr Imtiyaz Sir.\n\n
        It is an Android-based application for user grievance registration, helpline system and to download several useful documents.\n\n
        It allows the user to create an account, register complaints and get contact details of authority through helpline system with an interactive UI.
    </string>
    <string name="contactUs">Ashhar\nemail: mushtaq.ashhar@gmail.com\ncontact: +91 8586880076\n\n\n
                             Dikshant\nemail: dikshant01@icloud.com\ncontact: +91 8586880076\n\n\n\n
                             Address:\nSchool of Engineering Sciences &amp; Technology\n
                             Jamia Hamdard, New Delhi, 110062\nIndia</string>
    <string name="action_settings">Settings</string>
    <string name="conform_password">Conform Password</string>
    <string name="name">Name</string>
    <string name="email">email</string>
    <string name="username">username</string>
    <string name="_10_digit_mobile_no">10 Digit Mobile No.</string>
    <string name="aadhar">AADHAR</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="user_id">user id</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_account"><u>Don\'t have account</u></string>
    <string name="back">Back</string>
    <string name="already_exist">Already exist</string>
    <string name="tv1"><a href="http://mcdonline.gov.in/tri/sdmc_mcdportal/dwdforms/birth.pdf">Birth Registration Form</a></string>
    <string name="tv2"><a href="http://delhi.gov.in/wps/wcm/connect/66af22004e01eacd841ea4d4f77cccee/Time+Table+of+DTC+Bus+Routes+%28City++Service%29.xlsx?MOD=AJPERES&amp;lmod=-322799927">Time Table of DTC Bus Routes</a></string>
    <string name="tv3"><a href="http://delhi.gov.in/wps/wcm/connect/1b3d2080425bcef1a98fede65720bfa0/Time+Table+of+NCR+Bus+Routes.xlsx?MOD=AJPERES&amp;lmod=-322799927">Time Table of DTC NCR Bus Routes</a></string>
    <string name="tv4"><a href="http://delhi.gov.in/wps/wcm/connect/abbed1804df8eec685abddc4677a1568/Time+Table+of+Night+Bus++Services.xlsx?MOD=AJPERES&amp;lmod=-322799927">Time Table of Night Bus Service</a></string>
    <string name="tv5"><a href="http://delhi.gov.in/wps/wcm/connect/DOIT_DTC/dtc/pdf/pass+application+form">DTC Bus Pass Form</a></string>
    <string name="tv6"><a href="http://www.delhimetrorail.com/otherdocuments/922/Route_Map_Folder_Eng_CTC.pdf">Delhi Metro Map</a></string>
    <string name="tv7"><a href="https://edistrict.delhigovt.nic.in/Downloads/ApplicationForm/Input_9050.pdf">Issuance of OBC Cast Certificate</a></string>
    <string name="tv8"><a href="https://edistrict.delhigovt.nic.in/Downloads/ApplicationForm/Input_9054.pdf">Issuance of Domicile Certificate</a></string>
    <string name="tv9"><a href="https://edistrict.delhigovt.nic.in/Downloads/ApplicationForm/Input_9055.pdf">Issuance of Income Certificate</a></string>
    <string name="tv10"><a href="https://edistrict.delhigovt.nic.in/Downloads/ApplicationForm/Input_9073.pdf">Registration of Marriage</a></string>
    <string-array name="departments">
        <item>Select Department</item>
        <item>Airlines(Domestic)</item>
        <item>Airlines(International)</item>
        <item>Blood Banks</item>
        <item>Bomb Disposal Squads</item>
        <item>Bus Services</item>
        <item>Cremation Grounds</item>
        <item>Deputy Commissioners of Delhi</item>
        <item>Educational Board/Institutions</item>
        <item>Eye Banks</item>
        <item>Fire Services</item>
        <item>Hospitals</item>
        <item>Medical Stores(24 Hrs)</item>
        <item>Other Important Numbers</item>
        <item>Police</item>
        <item>Post Offices</item>
        <item>Press</item>
        <item>Railways</item>
    </string-array>
    <string name="signup">Sign Up</string>
</resources>